<resources>
    <string name="app_name">PotHoleClickerClient</string>
    <string name="choose_file">Choose file</string>
    <string name="select_device">Select device</string>
    <string name="pothole">Pot Hole</string>
    <string name="speed_bump">Speed Bump</string>
    <string name="manhole">Man Hole</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="app_title">Pothole\nClicker App</string>
    <string name="no_sensor_device_selected">No sensor device selected</string>
    <string name="frame_count">%1$d frames</string>
</resources>