<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#202020"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp">

            <ImageView
                android:id="@+id/logoLeft"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ku_logo_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/logoRight"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/urjc_logo_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/logoLeft"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnSettings"
                app:layout_constraintStart_toEndOf="@id/logoRight"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnSettings"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/settings"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:columnCount="2"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="0.15"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deviceName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:gravity="fill_horizontal|center_vertical"
                android:text="@string/no_sensor_device_selected"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/playButton"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="0dp"
                android:src="@drawable/play_disabled"
                app:cornerRadius="0dp"
                app:tint="#ff0000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_rowWeight="0.15"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/frameCounter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0 frames"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnPotHole"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"

            android:background="#D90B0B"
            app:cornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >
            
            <TextView
                android:id="@+id/pothole_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pothole"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/pothole_counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/pothole_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pothole_text"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnSpeedBump"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"

            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"

            android:background="#186581"
            app:cornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/speed_bump_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_bump"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/speedbump_counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/speedbump_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speed_bump_text"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnManHole"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"

            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"

            android:background="#497533"
            app:cornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/manhole_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhole"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/manhole_counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/manhole_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manhole_text"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnOther"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"

            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"

            android:background="#642797"
            app:cornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:id="@+id/other_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/other_counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/other_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/other_text"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>